create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1488,7 +1488,7 @@ body {
 .cid-rjXX0SyXrD {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #ffffff;
+  background-color: #dab1f1;
 }
 .cid-rjXX0SyXrD .mbr-section-subtitle {
   color: #767676;
@@ -1496,7 +1496,7 @@ body {
 .cid-rjXX60NaQ1 {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #efefef;
+  background-color: #32064a;
 }
 .cid-rjXX60NaQ1 .pricing {
   padding: 3.3rem;
